# Pico-RJ45-Sock

./: LICENSE  README.md
doc/vban_preamp/: VBAN_PreAmp.CE3
firmware/hello_world/: CMakeLists.txt  eth.c  hwinit.c  icmp.c  icmp.h  main.c  ser_10base_t.pio  system.h  udp.c
firmware/vban/: CMakeLists.txt  eth.c  eth.h  hwinit.c  main.c  oled.c  oled.h  system.h  udp.h  vban.c  vban.h
kicad/: .gitignore  fp-lib-table  pico_rj45.kicad_pcb  pico_rj45.kicad_prl  pico_rj45.kicad_pro  pico_rj45.kicad_sch
kicad/rj45-sock.pretty/: castellated_2.54mm_smd_x4.kicad_mod
